# End-to-End-Data-Pipeline

./: main.py  pyproject.toml
config/: google_cloud.py  spark_session.py
data_ingestion/fundamentus/: data_ingestion_fundamentus.py
data_ingestion/yahoo_finance/: data_ingestion_yahoo_finance.py
jobs/: job_data_ingestion.py
notebook/: eda_fundamentus.ipynb
utils/: log_message.py  storage.py
